--- a/src/gui.html
+++ b/src/gui.html
@@ -28,14 +28,15 @@
 
             <sly-field v-if="state.aug" title="Params" description="Aug arguments with default settings">
                 <div v-for="item in data.config[state.category][state.aug].params" :key="item.name">
-                    <sly-field :title="item.name">
-                        <div>{{state.augVModels[state.category][state.aug]}}</div>
-                        <el-slider class="ml10 mr10"
-                                   v-if="item.type === 'el-slider-range'"
-                                   v-model="state.augVModels[state.category][state.aug]" range
-                                   :min="item.min" :max="item.max">
-                        </el-slider>
-                    </sly-field>
+                    <div class="mt10">
+                        <b style="color: green">{{item.name}}</b> =
+                        <span style="color: blue">{{state.augVModels[state.category][state.aug][item.name]}}</span>
+                    </div>
+                    <el-slider class="ml10 mr10"
+                               v-if="item.type === 'el-slider-range'"
+                               v-model="state.augVModels[state.category][state.aug][item.name]" range
+                               :min="item.min" :max="item.max">
+                    </el-slider>
                 </div>
             </sly-field>
 
