--- a/src/gui.html
+++ b/src/gui.html
@@ -1,4 +1,4 @@
-<div id="sliding-window">
+<div id="augs-research">
     <sly-card title="Input Project" subtitle="Original data remains unchanged, new project will be created">
         <sly-field title="" description="Input Data">
             <a slot="title" target="_blank"
@@ -8,6 +8,14 @@
         </sly-field>
     </sly-card>
 
+    <sly-style>
+        #augs-research .sly-copy-to-clipboard-widget {
+            background: #eeffcc;
+        }
+        #augs-research .sly-copy-to-clipboard-widget .content .ace-chrome {
+            background-color: #eeffcc;
+        }
+    </sly-style>
     <div class="fflex mt15" style="align-items: stretch">
         <sly-card class="mr15"
                   title="Settings"
@@ -42,10 +50,33 @@
 
 
         </sly-card>
-        <sly-card title="Random Preview"
-                  subtitle="Visualize sliding windows on random image as video"
-                  style="width: 100%">
-            <div>123</div>
-        </sly-card>
+
+        <el-tabs type="border-card" style="width: 100%">
+            <el-tab-pane label="Preview">
+                <sly-field v-if="state.aug" title="Python code">
+                    <sly-copy-to-clipboard v-if="state.aug"
+                                           :data="data.config[state.category][state.aug].py">
+                        <sly-editor v-model="data.config[state.category][state.aug].py"
+                                    :options="{
+                                    mode: 'ace/mode/python',
+                                    showGutter: false,
+                                    readOnly: true,
+                                    maxLines: 10,
+                                    highlightActiveLine: false
+                                 }">
+                        </sly-editor>
+                    </sly-copy-to-clipboard>
+                </sly-field>
+            </el-tab-pane>
+            <el-tab-pane label="Documentation">
+                <div>Documentation</div>
+                <sly-markdown :data="data.docstring"></sly-markdown>
+            </el-tab-pane>
+        </el-tabs>
+        <!--        <sly-card title="Preview Sele"-->
+        <!--                  subtitle="Visualize sliding windows on random image as video"-->
+        <!--                  style="width: 100%">-->
+        <!--            <div>123</div>-->
+        <!--        </sly-card>-->
     </div>
 </div>
