--- a/src/gui.html
+++ b/src/gui.html
@@ -10,10 +10,10 @@
 
     <sly-style>
         #augs-research .sly-copy-to-clipboard-widget {
-            background: #eeffcc;
+        background: #eeffcc;
         }
         #augs-research .sly-copy-to-clipboard-widget .content .ace-chrome {
-            background-color: #eeffcc;
+        background-color: #eeffcc;
         }
     </sly-style>
     <div class="fflex mt15" style="align-items: stretch">
@@ -39,63 +39,59 @@
                 </el-select>
             </sly-field>
 
-            <sly-field v-if="state.aug" title="Params" description="Aug arguments with default settings">
-                <div v-for="item in data.config[state.category][state.aug].params" :key="item.name">
-                    <div class="mt10">
-                        <b style="color: green">{{item.name}}</b> =
-                        <span style="color: blue">{{state.augVModels[state.category][state.aug][item.name]}}</span>
+            <div v-if="state.aug">
+<!--                <hr class="mt10 mb10" style="border: 0; border-top: 1px solid rgba(0,0,0,.12);"/>-->
+                <sly-field title="Params" description="Aug arguments with default settings">
+                    <div v-for="item in data.config[state.category][state.aug].params" :key="item.name">
+                        <div class="mt10">
+                            <b style="color: green">{{item.name}}</b> =
+                            <span style="color: blue">{{state.augVModels[state.category][state.aug][item.name]}}</span>
+                        </div>
+                        <el-slider class="ml10 mr10"
+                                   v-if="item.type === 'el-slider-range'"
+                                   v-model="state.augVModels[state.category][state.aug][item.name]" range
+                                   :min="item.min" :max="item.max">
+                        </el-slider>
                     </div>
-                    <el-slider class="ml10 mr10"
-                               v-if="item.type === 'el-slider-range'"
-                               v-model="state.augVModels[state.category][state.aug][item.name]" range
-                               :min="item.min" :max="item.max">
-                    </el-slider>
-                </div>
-            </sly-field>
-
-
+                </sly-field>
+            </div>
         </sly-card>
-
-        <el-tabs type="border-card" style="width: 100%">
-            <el-tab-pane label="Preview">
-                <sly-field v-if="state.aug" title="Python code">
-                    <sly-copy-to-clipboard :data="state.py">
-                        <sly-editor v-model="state.py"
-                                    :options="{
+        <sly-card title="Preview current transformation"
+                  subtitle="Preview python code and aug result on random image"
+                  style="width: 100%">
+            <div slot="header">
+                <div class="fflex">
+                    <el-input-number class="mr10" v-model="state.previewCount" :min="1" :max="20"
+                                     size="small"></el-input-number>
+                    <el-button
+                            type="primary"
+                            @click="state.previewLoading = true; command('preview')"
+                            :loading="state.previewLoading"
+                    >
+                        <i class="zmdi zmdi-slideshow" style="margin-right: 5px"></i> Preview
+                    </el-button>
+                </div>
+            </div>
+            <div v-if="state.aug">
+                <b>Official documentation:</b>
+                <a :href="data.config[state.category][state.aug].durl" target="_blank">
+                    link <i class="zmdi zmdi-open-in-new"></i>
+                </a>
+            </div>
+            <sly-field v-if="state.aug" title="Python code">
+                <sly-copy-to-clipboard v-if="state.aug"
+                                       :data="data.config[state.category][state.aug].py">
+                    <sly-editor v-model="data.config[state.category][state.aug].py"
+                                :options="{
                                     mode: 'ace/mode/python',
                                     showGutter: false,
                                     readOnly: true,
                                     maxLines: 10,
                                     highlightActiveLine: false
                                  }">
-                        </sly-editor>
-                    </sly-copy-to-clipboard>
-                </sly-field>
-<!--                <sly-field v-if="state.aug" title="Python code">-->
-<!--                    <sly-copy-to-clipboard v-if="state.aug"-->
-<!--                                           :data="data.config[state.category][state.aug].py">-->
-<!--                        <sly-editor v-model="data.config[state.category][state.aug].py"-->
-<!--                                    :options="{-->
-<!--                                    mode: 'ace/mode/python',-->
-<!--                                    showGutter: false,-->
-<!--                                    readOnly: true,-->
-<!--                                    maxLines: 10,-->
-<!--                                    highlightActiveLine: false-->
-<!--                                 }">-->
-<!--                        </sly-editor>-->
-<!--                    </sly-copy-to-clipboard>-->
-<!--                </sly-field>-->
-            </el-tab-pane>
-<!--            <el-tab-pane label="Documentation">-->
-<!--                <div>Documentation</div>-->
-<!--&lt;!&ndash;                <pre>{{data.docstring}}</pre>&ndash;&gt;-->
-<!--                <sly-markdown :data="data.docstring"></sly-markdown>-->
-<!--            </el-tab-pane>-->
-        </el-tabs>
-        <!--        <sly-card title="Preview Sele"-->
-        <!--                  subtitle="Visualize sliding windows on random image as video"-->
-        <!--                  style="width: 100%">-->
-        <!--            <div>123</div>-->
-        <!--        </sly-card>-->
+                    </sly-editor>
+                </sly-copy-to-clipboard>
+            </sly-field>
+        </sly-card>
     </div>
 </div>
