--- a/src/gui.html
+++ b/src/gui.html
@@ -13,6 +13,13 @@
         margin-bottom: 8px;
         }
     </sly-style>
+
+    <sly-card class="mr15"
+              title="Your custom augs pipeline"
+              subtitle="Add transformations in a sequence, preview the results of individual aug or a whole pipeline">
+<!--        <div v-for="item in data.config[state.category][state.aug].params" :key="item.name">-->
+    </sly-card>
+
     <div class="fflex mt15" style="align-items: stretch">
         <div>
             <sly-card class="mr15"
