--- a/src/gui.html
+++ b/src/gui.html
@@ -76,7 +76,7 @@
                                 </el-checkbox>
                                 <el-input-number v-if="item.type === 'el-input-number'" size="small"
                                                  v-model="state.augVModels[state.category][state.aug][item.pname]"
-                                                 :min="item.min" :max="item.max" :step="item.step || 1">
+                                                 :min="item.min" :max="item.max">
                                 </el-input-number>
                                 <el-select v-if="item.type === 'el-select'" size="small"
                                            v-model="state.augVModels[state.category][state.aug][item.pname]">
