--- a/src/gui.html
+++ b/src/gui.html
@@ -69,7 +69,8 @@
                                                v-model="state.augVModels[state.category][state.aug][item.pname]" range
                                                :min="item.min" :max="item.max" :step="item.step || 1">
                                     </el-slider>
-                                    <span>{{state.augVModels[state.category][state.aug][item.pname]}}</span>
+                                    <span>({{state.augVModels[state.category][state.aug][item.pname][0]}},
+                                          {{state.augVModels[state.category][state.aug][item.pname][1]}})</span>
                                 </div>
                                 <el-checkbox v-if="item.type === 'el-checkbox'"
                                              v-model="state.augVModels[state.category][state.aug][item.pname]">Enable
